[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.104" 
anyhow = "1.0.75"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }